--- a/src/app/shared/components/custom-dropdown-select/custom-dropdown-select.component.html
+++ b/src/app/shared/components/custom-dropdown-select/custom-dropdown-select.component.html
@@ -1,47 +1,68 @@
 <div class="tw-w-full">
   <div class="tw-relative">
     <!-- Label -->
-    <label *ngIf="label" class="tw-block tw-text-sm tw-font-medium tw-text-gray-700 tw-mb-2">
+    <label
+      *ngIf="label"
+      class="tw-block tw-text-sm tw-font-medium tw-text-gray-700 tw-mb-2"
+    >
       {{ label }}
       <span *ngIf="required" class="tw-text-red-500">*</span>
     </label>
 
-
-    <button type="button" [ngClass]="{
-    'tw-bg-white': !selectedItem,
-    'tw-bg-gray-100': selectedItem
-  }" class="tw-w-full tw-border tw-border-gray-700 tw-rounded-md tw-shadow-sm tw-pl-3 tw-pr-10 tw-py-2 tw-text-left tw-text-gray-700 hover:tw-bg-gray-100 focus:tw-outline-none focus:tw-ring-1 focus:tw-ring-[#FF3C00] focus:tw-border-[#FF3C00] sm:tw-text-sm tw-relative"
-      (click)="toggleDropdown($event)" [attr.aria-expanded]="isDropdownOpen ? 'true' : 'false'" aria-haspopup="listbox"
-      aria-labelledby="listbox-label">
-
+    <button
+      type="button"
+      [ngClass]="{
+        'tw-bg-white': !selectedItem,
+        'tw-bg-gray-100': selectedItem
+      }"
+      class="tw-w-full tw-border tw-border-gray-700 tw-rounded-md tw-shadow-sm tw-pl-3 tw-pr-10 tw-py-2 tw-text-left tw-text-gray-700 hover:tw-bg-gray-100 focus:tw-outline-none focus:tw-ring-1 focus:tw-ring-[#2563EB] focus:tw-border-[#2563EB] sm:tw-text-sm tw-relative"
+      (click)="toggleDropdown($event)"
+      [attr.aria-expanded]="isDropdownOpen ? 'true' : 'false'"
+      aria-haspopup="listbox"
+      aria-labelledby="listbox-label"
+    >
       <!-- Affichage de la valeur sélectionnée ou du placeholder -->
       <span class="tw-block tw-truncate">
         {{ selectedItem ? selectedItem : placeholder }}
       </span>
 
       <!-- Icône de dropdown -->
-      <span class="tw-absolute tw-inset-y-0 tw-right-0 tw-flex tw-items-center tw-pr-2">
-        <i *ngIf="!isDropdownOpen" class="ri-arrow-down-s-line tw-text-gray-400"></i>
-        <i *ngIf="isDropdownOpen" class="ri-arrow-up-s-line tw-text-gray-400"></i>
+      <span
+        class="tw-absolute tw-inset-y-0 tw-right-0 tw-flex tw-items-center tw-pr-2"
+      >
+        <i
+          *ngIf="!isDropdownOpen"
+          class="ri-arrow-down-s-line tw-text-gray-400"
+        ></i>
+        <i
+          *ngIf="isDropdownOpen"
+          class="ri-arrow-up-s-line tw-text-gray-400"
+        ></i>
       </span>
     </button>
 
-    <ul *ngIf="isDropdownOpen"
+    <ul
+      *ngIf="isDropdownOpen"
       class="tw-absolute tw-z-10 tw-mt-1 tw-w-full tw-shadow-lg tw-max-h-60 tw-overflow-auto tw-rounded-md tw-py-1 tw-bg-white tw-ring-1 tw-ring-gray-300 sm:tw-text-sm"
-      tabindex="-1" role="listbox">
-
+      tabindex="-1"
+      role="listbox"
+    >
       <!-- Parcours des options -->
-      <li *ngFor="let item of items"
+      <li
+        *ngFor="let item of items"
         class="tw-cursor-pointer tw-select-none tw-relative tw-py-2 tw-pl-3 tw-pr-9 hover:tw-bg-gray-100"
-        (click)="selectItem(item)" role="option">
-
+        (click)="selectItem(item)"
+        role="option"
+      >
         <!-- Affichage de la valeur dans la liste -->
         <span class="tw-block tw-truncate">{{ item.value }}</span>
 
         <!-- Icône de sélection -->
-        <span *ngIf="selectedItem === item.value"
-          class="tw-absolute tw-inset-y-0 tw-right-0 tw-flex tw-items-center tw-pr-4">
-          <i class="ri-check-line tw-text-orange-600"></i>
+        <span
+          *ngIf="selectedItem === item.value"
+          class="tw-absolute tw-inset-y-0 tw-right-0 tw-flex tw-items-center tw-pr-4"
+        >
+          <i class="ri-check-line tw-text-blue-600"></i>
         </span>
       </li>
     </ul>
